src/styles/blocks/_counter.scss
@use '../misc/variables';

.counter {
  display: none;
  align-items: center;
  justify-content: center;
  min-width: 40px;
  min-height: 40px;
  padding: 0 variables.$gap;

  text-align: center;

  border-radius: 50px;
  border: variables.$border-width solid var(--body-color);

  @media (min-width: 350px) {
    display: flex;
  }
}

